<resources>
    <string name="app_name">SpeakerTrainer</string>
    <string name="authorization">Войти</string>
    <string name="enterPassword">Введите пароль</string>
    <string name="enterEmail">Введите почту</string>
    <string name="authorizationText">Авторизация</string>
    <string name="registrationText">Регистрация</string>
    <string name="registerText">Зарегестрироваться</string>
    <string name="passwordAgainText">Повторите пароль</string>
    <string name="passwordRecoveryText">Восстановление пароля</string>
    <string name="nextText">Далее</string> //
    <string name="LoadVideoText">Загрузить видео</string> //
    <string name="StartVideoText">Начать запись</string> //
    <string name="RecomendationsText">Рекомендации</string> //
    <string name="ArchiveText">Архив</string> //
    <string name="mustFillField">Поле должно быть заполнено</string> //
    <string name="exit">Выход</string> //
    <string name="archieve">архив</string> //
    <string name="home">домой</string> //
    <string name="back">вернуться</string> //
    <string name="official">Официальное</string> //
    <string name="recordName">введите название видеозаписи</string>//
    <string name="all">Выбрать все</string>//
    <string name="allVisual">Все визуальные компоненты</string>//
    <string name="appearance">Образ</string>//
    <string name="gesticulation">Жестикуляция</string>//
    <string name="gaze">Направление взгляда</string>//
    <string name="angle">Ракурс</string>//
    <string name="allAudio">Все аудио компоненты</string> //
    <string name="intelligibility">Разборчивость речи</string>//
    <string name="speechRate">Темп речи</string>//
    <string name="cleanSpeech">Слова паразиты</string>//
    <string name="noise">Фоновый шум</string>//
    <string name="emotionality">Эмоции</string>//
    <string name="forgotPassword">Забыли пароль?</string> //
    <string name="fragmentLen">Длина анализируемых фрагментов: 3</string>//
    <string name="chooseType">Выберите тип видеозаписи</string> //
    <string name="chooseEmotions">Выберите недопустимые эмоции</string> //
    <string name="joy">Радость</string> //
    <string name="sadness">Грусть</string> //
    <string name="anger">Злость</string> //
    <string name="neutral">Нейтральное состояние</string> //
    <string name="surprise">Удивление</string> //
    <string name="disgust">Отвращение</string> //
    <string name="invalidGesture">Выберите нежелательную скорость жестикуляции</string>//
    <string name="notActive">Низкая</string> //
    <string name="optimal">Средняя</string> //
    <string name="active">Высокая</string> //
</resources>